[tool.poetry]
name = "test-repo"
version = "0.1.0"
description = ""
authors = ["Ken Harlbar <balotech514@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.4.0"
apache-flink = "^1.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
